--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -18,6 +18,47 @@
   border-radius: 2px;
 }
 
+
 .hide {
   display: none;
+}
+
+body {
+  background-color: gray;
+}
+
+.gallery__link {
+  text-decoration: none;
+  color: #2f2f37;
+}
+
+img {
+  display: block;
+  width: 400px;
+  height: 300px;
+  overflow: hidden;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.load-more {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: darkcyan;
+  border: 2px, solid, black;
+  border-radius: 5px;
 }
